tests/negative/gold/interface_cycle3_test.gold
tests/negative/interface_cycle3_test.toit:3:11: error: Cycle in super/interface chain
interface A implements B:
          ^
tests/negative/interface_cycle3_test.toit:3:24: error: This clause contributes to the cycle
interface A implements B:
                       ^
tests/negative/interface_cycle3_test.toit:5:24: error: This clause contributes to the cycle
interface B implements A:
                       ^
Compilation failed.
